TKE Ingress获取真实源IP Playbook指南/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-svc
spec:
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: nginx-demo
  type: NodePort
